# MavixDesktop-UI

./: .env-example  .gitignore  CHANGELOG.md  LICENSE  README.md  TECHNICAL.md  USER_GUIDE.md  mavixdesktop.spec  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: build-windows.yml
scripts/: BUILD.md  README.md  _make_icon.py  build_appimage.sh  build_binary.sh  build_linux.sh  build_windows.ps1
src/mavixdesktop/: __main__.py  coordinator.py
src/mavixdesktop/core/: backoff.py  config.py  logger.py  user_config.py
src/mavixdesktop/fc/: crsf.py  encoder.py  mavlink_encoder.py  mavlink_relay.py
src/mavixdesktop/joystick/: calibration.py  guard.py  input.py  manager.py
src/mavixdesktop/qgc/: launcher.py
src/mavixdesktop/server/: api.py  signal_client.py  token_store.py
src/mavixdesktop/ui/: __init__.py  app.py  login_page.py  state.py  video_widget.py
src/mavixdesktop/ui/managers/: __init__.py  connection.py  demo_connection.py  video.py
src/mavixdesktop/ui/screens/: bridge.py  (+11 more)
src/mavixdesktop/webrtc/: channels.py  manager.py  peer.py  relay_patch.py
tests/: conftest.py  test_api.py  test_backoff.py  test_config.py  test_coordinator.py  test_coverage_boost.py  test_fc_crsf.py  test_fc_encoder.py  test_joystick_calibration.py  test_joystick_input.py  test_joystick_manager.py  test_map_widget.py  test_mavlink_relay.py  test_qgc_launcher.py  test_signal_client.py  test_speedtester.py  test_speedtester_units.py  test_token_store.py  test_ui_smoke.py  test_video_widget.py  test_webrtc_channels.py  test_webrtc_manager.py  test_webrtc_peer.py
(+6 files in other folders)
