[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mavixdesktop"]

[project]
name = "mavixdesktop"
version = "0.1.0"
description = "MavixDesktop — GCS / ground station for the Mavix UAV project (PC receiver)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AurunChill" }]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "aiortc>=1.13",
    "av>=11.0",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "PySide6>=6.6",
    "pygame>=2.5",
    "keyring>=24.0",
    "pymavlink>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-qt>=4.4",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mavixdesktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
